ex-3.2/manifests/log-output-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: hovhanneshovakimyan/random-string-generator:3.2-multiarch
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
  namespace: devops
  annotations:
    cloud.google.com/backend-config: '{"default": "log-output-backendconfig"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
