ex-3.2/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-service
                port:
                  number: 5001
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: log-output-service
                port:
                  number: 5000
